# iotSF

./: CMakeLists.txt  README.md  Requiremets.md
.github/workflows/: ci.yml
include/wifi/pci/: pci_detector.h
include/wifi/usb/: info_extractor.h  usb_detector.h
include/wifi/wireless/: info_extractor.h
src/: main.cpp
src/wifi/pci/: pci_detector.cpp
src/wifi/usb/: info_extractor.cpp  usb_detector.cpp
src/wifi/wireless/: info_extractor.cpp
